--- a/src/config/config.env
+++ b/src/config/config.env
@@ -8,7 +8,7 @@ JWT_EXPIRES_IN = 1h
 
 COOKIE_EXPIRATION_TIME = 1h
 
-BASE_URL = http://localhost:3000
+BASE_URL = https://assign-mentor-db.netlify.app
 
 
 EMAIL_SERVICE_ID = service_hwvn6cr
